--- a/package.json
+++ b/package.json
@@ -1,13 +1,43 @@
 {
-  "name": "eslint-config-zeus",
+  "name": "@zeustechbr/eslint-config",
   "version": "1.0.0",
-  "description": "Projeto desenvolvido para disponibilizar a padronização da configuração do ESLint + Prettier em projetos React.js e Node.js que nós da ZeusTechBR utilizamos.",
+  "private": false,
+  "description": "Project developed to provide standardization of ESLint configuration in React.js and Node.js projects used by ZeusTechBR",
   "main": "index.js",
-  "keywords": ["eslint", "setup eslint", "eslint config", "prettier", "prettier config"],
+  "keywords": [
+    "eslint",
+    "setup eslint",
+    "eslint config",
+    "prettier",
+    "prettier config"
+  ],
   "author": "ZeusTechBR",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
-    "type": "git",
     "url": "zeustechbr/eslint-config-zeus"
+  },
+  "peerDependencies": {
+    "eslint": "^8.57.0",
+    "typescript": ">=5"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.2.5"
   }
 }
